--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -7,6 +7,7 @@
     <title>HTML5</title>
   </head>
   <body>
+    <!-- Header -->
     <header>
       <!-- Six Heading Tags -->
       <h1>Heading 1</h1>
@@ -15,34 +16,31 @@
       <h4>Heading 4</h4>
       <h5>Heading 5</h5>
       <h6>Heading 6</h6>
-      <nav>
-        <ul>
-          <li>Header</li>
-          <li>Nav</li>
-          <li>Section</li>
-          <li>Article</li>
-          <li>Footer</li>
-        </ul>
-      </nav>
     </header>
-
+    <!-- Nav -->
+    <nav>
+      <ul>
+        <li>Header</li>
+        <li>Nav</li>
+        <li>Section</li>
+        <li>Article</li>
+        <li>Footer</li>
+      </ul>
+    </nav>
+    <!-- hr tag -->
+    <hr />
+    <!-- Section -->
     <section>
       <!-- HTML Layout -->
       <img
         src="https://www.bitdegree.org/learn/storage/media/images/de63e0dd-5287-4871-aac2-4aeb7678759e.jpg"
         alt="layout" />
       <!-- pre Tag -->
-      <hr />
       <pre style="background-color: wheat">
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex dolores velit sit quis
       consequatur, ea perspiciatis corrupti aliquid excepturi quo rem molestias deleniti esse
-      aspernatur repellendus maiores possimus beatae doloremque similique, eius fuga.
-    </pre
+      aspernatur repellendus maiores possimus beatae doloremque similique, eius fuga.</pre
       >
-
-      <!-- hr tag -->
-      <hr />
-
       <!-- Paragraph Tag -->
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate hic commodi quia,
@@ -51,14 +49,37 @@
         Et voluptate aliquam nulla veritatis, a explicabo delectus cum, animi sit dicta accusantium?
         Debitis saepe tempore adipisci accusantium eaque, eveniet vitae voluptate!
       </p>
+      <!-- a tag -->
+      <a href="https://www.facebook.com/Sabbir2809" target="_blank">Link to Facebook</a>
     </section>
-
-    <!-- a tag -->
-    <a href="https://www.facebook.com/Sabbir2809" target="_blank">Link to Facebook</a>
-
-    <!-- img tag -->
-    <img
-      src="https://www.tutorialstonight.com/assets/html/html-basic-tags.webp"
-      alt="HTML Basic Tags" />
+    <article>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, dolore hic voluptas
+        voluptatem sed qui omnis laborum distinctio odio molestiae, perferendis veniam numquam
+        assumenda cumque ad. Consequatur officia voluptatibus nemo eius omnis quaerat harum numquam
+        quisquam sint provident nostrum itaque, atque commodi blanditiis odio perferendis dolorum
+        repudiandae. Dolore eligendi unde repellat tenetur modi molestiae sunt impedit totam
+        explicabo, aperiam facilis natus, adipisci animi pariatur a quos distinctio earum quae ad?
+        Illo corporis repudiandae quam. Ullam eum voluptates explicabo molestiae? Recusandae fugiat
+        ducimus amet dignissimos itaque, autem ipsa tenetur facere tempora ex accusantium enim
+        necessitatibus. Repellat fugit perspiciatis veritatis deserunt! Amet!
+      </p>
+    </article>
+    <aside>
+      <ol>
+        <li>HTML Tag</li>
+        <li>Head Tag</li>
+        <li>Body Tag</li>
+        <li>Paragraph Tag</li>
+        <li>Heading Tags</li>
+        <li>Anchor Tag</li>
+        <li>List Tag</li>
+        <li>Form Tag</li>
+        <li>Table Tag</li>
+      </ol>
+    </aside>
+    <footer>
+      <small> All rights reserved</small>
+    </footer>
   </body>
 </html>
