--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -33,6 +33,16 @@
         alt="layout" />
     </nav>
     <hr />
+    <section>
+      <div class="box-cotainer"></div>
+      <div class="box-cotainer"></div>
+      <div class="box-cotainer"></div>
+      <div class="box-cotainer"></div>
+      <div class="box-cotainer"></div>
+      <div class="box-cotainer"></div>
+      <div class="box-cotainer"></div>
+      <div class="box-cotainer"></div>
+    </section>
     <section class="flex-container">
       <div class="flex-elements">1</div>
       <div class="flex-elements">2</div>
