--- a/HTML5/index.html
+++ b/HTML5/index.html
@@ -33,6 +33,10 @@
         alt="layout" />
     </nav>
     <hr />
+    <div class="div-container">
+      <div class="a"></div>
+      <div class="b"></div>
+    </div>
     <section>
       <div class="box-cotainer"></div>
       <div class="box-cotainer"></div>
